<resources>
    <string name="app_name">ALL4SPORT</string>
    <string name="slogan">Tout pour le sport</string>
    <string name="email">Email</string>
    <string name="bienvenue_sur_all4sport">Bienvenue sur All4Sport</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="title_activity_article">article</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_app">App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="qrCode">Scan QR Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addCart">Ajouter au panier</string>
    <string name="ttc">TTC</string>
    <string name="prix">Prix :</string>
    <string name="name">"Nom : "</string>
    <string name="description">"Description : "</string>
    <string name="articleimage">ArticleImage</string>
    <string name="scan">Veuillez scanner un produit</string>
    <string name="panier">Votre panier</string>
    <string name="valider">Valider</string>
    <string name="ville">Ville...</string>
    <string name="codePostal">Code postal...</string>
    <string name="adresse">Adresse...</string>
    <string name="order">Commander</string>
    <string name="produits_promos">Produits en promo</string>
    <string name="promos">Promos</string>
    <string name="promo">En promo !</string>
    <string name="descriptionArticle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>