<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/order"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/adresse"
            android:inputType="text"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/ville"
            android:inputType="text"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/codePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/codePostal"
            android:inputType="text"
            android:textSize="20sp"
            android:autofillHints="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/validerOrder"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/valider"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />
        

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>