<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductFragment">


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"

        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageArticle"
                android:layout_width="164dp"
                android:layout_height="200dp"
                android:src="@drawable/scan"
                android:scaleType="centerCrop"
                android:padding="12dp"


                android:contentDescription="@string/articleimage" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



                    <TextView
                        android:id="@+id/promoTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/promo"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:layout_margin="4dp"
                        android:drawableLeft="@drawable/ic_baseline_discount_24"
                        android:drawablePadding="3dp"
                        android:drawableTint="@color/white"
                        android:background="@drawable/red_background"
                        android:gravity="center_vertical"

                        />

                    <TextView
                        android:id="@+id/nameArticle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_margin="4dp"/>

                    <TextView
                        android:id="@+id/priceArticle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prix"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_margin="4dp" />

                    <TextView
                        android:id="@+id/ttc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ttc"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:layout_margin="4dp" />


                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addToCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:drawableLeft="@drawable/ic_baseline_add_shopping_cart_24"
                    android:text="@string/addCart"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_alignParentBottom="true"
                    />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/black"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="4dp"
                />

            <TextView
                android:id="@+id/descriptionArticleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/descriptionArticle"
                />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            />


    </LinearLayout>


</RelativeLayout>
